--- a/FYGP Project/Packages/manifest.json
+++ b/FYGP Project/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.0.5",
+    "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.inputsystem": "1.6.3",
     "com.unity.postprocessing": "3.2.2",
